--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "mongodb": "^6.7.0",
-    "morgan": "^1.10.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^8.6.0",
+    "express": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1",
+    "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "node-rsa": "^1.1.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pr-pass": "file:../blockchain-voting/PR-Pass/npm"
   }
 }
